--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,11 +1,17 @@
+.ButtonContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
 .Button {
   padding: 8px 16px;
   border-radius: 2px;
-  background-color: #3f51b5;
+  background-color: #b0e0e6;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
-  color: #fff;
+  color: #000;
   border: 0;
   text-decoration: none;
   cursor: pointer;
@@ -21,5 +27,5 @@
 
 .Button:hover,
 .Button:focus {
-  background-color: #303f9f;
+  background-color: #b0e9f9;
 }
