--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -17,3 +17,13 @@
   flex-wrap: wrap;
   gap: 20px;
 }
+
+.title {
+  margin-top: 50px;
+  margin-bottom: 0;
+  padding: 0;
+  font-size: 24px;
+  font-weight: 500;
+  color: #212121;
+  text-align: center;
+}
